--- a/.env
+++ b/.env
@@ -1,15 +1,15 @@
-OWNER_NAME="DULLAH"
-PREFIX="~"
-PUBLIC_MODE='non'
+OWNER_NAME="@CyberPsycho"
+PREFIX="."
+PUBLIC_MODE='yes'
 AUTO_READ_STATUS="non"
-AUTO_DOWNLOAD_STATUS="oui"
+AUTO_DOWNLOAD_STATUS="yes"
 BOT_NAME= "DULLAH_MD 👊"
 IMAGE_MENU= "https://static.animecorner.me/2023/08/op2.jpg"
 BOT_LINK=https://files.catbox.moe/wz1yra.js
-NUMERO_OWNER= "255716945971"
+NUMERO_OWNER= "51978194933"
 OWNER_NAME= "᚛DULLAH᚜"
 DATABASE_URL= ""
-WARN_COUNT= ""
+WARN_COUNT= "3"
 OPENAI_API_KEY= ""
 STARTING_BOT_MESSAGE='yes'
 ANTI_DELETE_MESSAGE='yes'
